# ergon

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs  models.rs
src/acp/: fs.rs  manager.rs  mcp_passthrough.rs  mod.rs  permissions.rs  session.rs  terminal.rs  transport.rs  types.rs
src/api/clients/: anthropic.rs  claude.rs  mod.rs  openai.rs  openai_compatible.rs  vllm.rs
src/mcp/: auth.rs  mod.rs  oauth_callback.rs
src/mcp/commands/: initialize.rs  initialized.rs  mod.rs
src/mcp/transport/: mod.rs  stdio.rs
src/ui/: chat.rs  mod.rs  settings.rs
src/ui/chat/: mod.rs  models.rs  state.rs  tasks.rs
