[package]
name = "ergon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
home = "0.5.12"
iced = { version = "0.13.1", features = ["markdown", "tokio"] }
iced_aw = { version = "0.12.2", features = ["number_input"] }
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
rmcp = { version = "0.8.5", features = ["client", "transport-io", "transport-streamable-http-client-reqwest", "transport-child-process"] }
simple_logger = "5.0.0"
slab = "0.4.11"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["process"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
