[package]
name = "ergon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
home = "0.5.12"
iced = { version = "0.14.0", features = ["markdown", "tokio"] }
iced_aw = { version = "0.13.0", features = ["number_input"] }
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
rmcp = { version = "0.14.0", features = ["client", "transport-io", "transport-streamable-http-client-reqwest", "transport-child-process"] }
simple_logger = "5.0.0"
slab = "0.4.12"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["process"] }
iced_fonts = { version = "0.3.0", features = ["lucide", "nerd"] }


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
