[package]
name = "ergon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
home = "0.5.12"
iced = { version = "0.14.0", features = ["markdown", "tokio"] }
iced_aw = { version = "0.13.1", features = ["number_input", "spinner"] }
log = "0.4.29"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
rmcp = { version = "1.3.0", features = ["client", "transport-io", "transport-streamable-http-client-reqwest", "transport-child-process", "auth"] }
simple_logger = "5.2.0"
slab = "0.4.12"
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.52.2", features = ["process", "net", "macros", "io-util"] }
open = "5"
async-trait = "0.1"
url = "2"
iced_fonts = { version = "0.3.0", features = ["lucide", "nerd"] }
rfd = "0.17.2"
mime_guess = "2.0.5"
base64 = "0.22.1"
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"
tokio-util = { version = "0.7.18", features = ["compat"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
